# kromer-api

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  flake.nix  local.dic  spellcheck.toml
examples/: basic.rs  transactions.rs  websocket.rs
src/: endpoints.rs  http.rs  lib.rs  model.rs  ws.rs
src/endpoints/: internal.rs  krist.rs  wallet.rs
src/endpoints/krist/: addresses.rs  misc.rs  names.rs  transactions.rs
src/http/: internal.rs  krist.rs  kromer.rs  util.rs  ws.rs
src/model/: krist.rs  wallet.rs  ws.rs
src/model/krist/: names.rs  transactions.rs  wallet.rs  wallet_addr.rs  wallet_pk.rs
src/ws/: error.rs  handle.rs  messages.rs
