[package]
name = "kromer-api"
description = "A wrapper for the Kromer2 HTTP and WebSocket API"
authors = ["Laincy <laincy@proton.me>"]
repository = "https://github.com/Laincy/kromer-api"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.22", features = ["json"] }
rust_decimal = "1.37.2"
serde = { version = "1.0.219", features = ["derive"] }
snafu = "0.8.6"
sha2 = "0.10.9"
tracing = "0.1.41"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }

[dev-dependencies]
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = "0.3.19"
